objects/ASI_MFM_Brand_Route_Type_Map__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For MFM CN. Approver is determined by budget owner</description>
        <label>Budget Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Brand_Route_Type_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Prefix__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Prefix</label>
        <referenceTo>ASI_MFM_Prefix__c</referenceTo>
        <relationshipLabel>ASI MFM Brand-Route Type Maps</relationshipLabel>
        <relationshipName>ASI_MFM_Brand_Route_Type_Maps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Responsible_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is use for JP PO</description>
        <label>Responsible By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Brand_Route_Type_Maps_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Route_Type__c</fullName>
        <label>Route Type</label>
        <referenceTo>ASI_MFM_Route_Type__c</referenceTo>
        <relationshipLabel>ASI MFM Brand-Route Type Maps</relationshipLabel>
        <relationshipName>ASI_MFM_Brand_Route_Type_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>ASI MFM Brand-Route Type Maps</relationshipLabel>
        <relationshipName>ASI_MFM_Brand_Route_Type_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI MFM Brand-Route Type Map</label>
    <nameField>
        <displayFormat>BRM{0000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Brand-Route Type Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>